# APO_13_c_cpp_hw-2

./: .travis.yml  CMakeLists.txt  README.md
include/: list.h  utils.h  vector.h
include/testy/: list.h  utils.h
src/: list.c  list.h  main.c  utils.c  vector.c
test/: main.cpp  test_utils.cpp
